tests/reference/run-scalar_allocation_check_05-e3b524c.stderr
runtime error: Argument 1 is unallocated.
  --> tests/errors/scalar_allocation_check_05.f90:10:14
   |
10 |     print *, m1%x
   |              ^^^^ This is unallocated
